added projects page

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,27 +22,8 @@
         <h1 id="logo"><a href="index.html">Home</a></h1>
         <nav id="nav">
             <ul>
-                {#                <li><a href="index.html">Home</a></li>#}
-                <li><a href="static/documents/resume-s2020.pdf" target="_blank">CV</a></li>
-                {#                <li>#}
-                {#                    <a href="#">Layouts</a>#}
-                {#                    <ul>#}
-                {#                        <li><a href="left-sidebar.html">Left Sidebar</a></li>#}
-                {#                        <li><a href="right-sidebar.html">Right Sidebar</a></li>#}
-                {#                        <li><a href="no-sidebar.html">No Sidebar</a></li>#}
-                {#                        <li>#}
-                {#                            <a href="#">Submenu</a>#}
-                {#                            <ul>#}
-                {#                                <li><a href="#">Option 1</a></li>#}
-                {#                                <li><a href="#">Option 2</a></li>#}
-                {#                                <li><a href="#">Option 3</a></li>#}
-                {#                                <li><a href="#">Option 4</a></li>#}
-                {#                            </ul>#}
-                {#                        </li>#}
-                {#                    </ul>#}
-                {#                </li>#}
-                {#                <li><a href="elements.html">Elements</a></li>#}
-                <li><a href="#" class="button primary">Projects</a></li>
+                <li><a href="../static/documents/resume-s2020.pdf" target="_blank">CV</a></li>
+                <li><a href="projects.html" class="button primary">Projects</a></li>
             </ul>
         </nav>
     </header>
@@ -60,26 +41,29 @@
                     </div>
 
                     <ul class="icons">
-                        <li><a href="https://github.com/KostadinDev" target ='_blank'  class=""><span class=""><img src='static/images/github.png' width='40px'></span></a>
+                        <li><a href="https://github.com/KostadinDev" target='_blank' class=""><span class=""><img
+                                src='../static/images/github.png' width='40px'></span></a>
                         </li>
-                        <li><a href="https://www.linkedin.com/in/kostadin-dev" target ='_blank' class=""><span class=""><img src='static/images/linkedin-logo.png'></span></a>
+                        <li><a href="https://www.linkedin.com/in/kostadin-dev" target='_blank' class=""><span
+                                class=""><img src='../static/images/linkedin-logo.png'></span></a>
                         </li>
-                        <li><a href="https://www.instagram.com/kostadin.devedzhiev/?hl=en" target ='_blank'  class=""><span class=""><img src='static/images/instagram-logo.png'
-                                                                     width='40px'></span></a></li>
+                        <li><a href="https://www.instagram.com/kostadin.devedzhiev/?hl=en" target='_blank'
+                               class=""><span class=""><img src='../static/images/instagram-logo.png'
+                                                            width='40px'></span></a></li>
 
                     </ul>
 
                 </div>
 
             </header>
-            <span class="image"><img src="static/images/profile-pic.jpg" alt=""/></span>
+            <span class="image"><img src="../static/images/profile-pic.jpg" alt=""/></span>
         </div>
         <a href="#one" class="goto-next scrolly">Next</a>
     </section>
 
     <!-- One -->
     <section id="one" class="spotlight style1 bottom">
-        <span class="image fit main"><img src="static/images/mauna-kea.jpg" alt=""/></span>
+        <span class="image fit main"><img src="../static/images/mauna-kea.jpg" alt=""/></span>
         <div class="content">
             <div class="container">
                 <div class="row">
@@ -112,7 +96,7 @@
 
     <!-- Two -->
     <section id="two" class="spotlight style2 right">
-        <span class="image fit main"><img src="static/images/ellipses-white.png" alt=""/></span>
+        <span class="image fit main"><img src="../static/images/ellipses-white.png" alt=""/></span>
         <div class="content">
             <header>
                 <h2>Motional EMF (&epsilon;) due to Compression in Ellipses</h2>
@@ -131,7 +115,7 @@
                 applications are discussed.</p>
             <p>Glad to have worked on this project together with Dr. Phillipe Binder and Alexa Runyan.</p>
             <ul class="actions">
-                <li><a href="#" class="button">Learn More</a></li>
+                <li><a href="https://github.com/KostadinDev/Elliptical-EMF-Induction" class="button">Learn More on GitHub<br> (Paper Currently Under Academic Review)</a></li>
             </ul>
         </div>
         <a href="#three" class="goto-next scrolly">Next</a>
@@ -139,7 +123,7 @@
 
     <!-- Three -->
     <section id="three" class="spotlight style3 left">
-        <span class="image fit main bottom"><img src="static/images/interactive-annotator.png" alt=""/></span>
+        <span class="image fit main bottom"><img src="../static/images/interactive-annotator.png" alt=""/></span>
         <div class="content">
             <header>
                 <h2>Co-Learning: Interactive Annotation Tool with DL</h2>
@@ -158,7 +142,7 @@
             <p>Thanks to Dr. Travis Mandel and Edward Cashmane for working with me on this project and to Maxwell Panoff
                 for his contribution.</p>
             <ul class="actions">
-                <li><a href="#" class="button">Learn More</a></li>
+                <li><a href="" class="button">Paper and Project in Development</a></li>
             </ul>
         </div>
         <a href="#four" class="goto-next scrolly">Next</a>
@@ -169,7 +153,8 @@
         <div class="container">
             <header class="major">
                 <h2>Other recent work</h2>
-                <p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+                <p>"As soon as you have made a thought, laugh at it." <br>
+                - Lao Tzu</p>
             </header>
             <div class="box alt">
                 <div class="row gtr-uniform">
@@ -208,40 +193,66 @@
             </div>
             <footer class="major">
                 <ul class="actions special">
-                    <li><a href="#" class="button">Learn More</a></li>
+                    <li><a href="projects.html" class="button">Learn More</a></li>
                 </ul>
             </footer>
         </div>
     </section>
 
+
+
     <!-- Five -->
     <section id="five" class="wrapper style2 special fade">
         <div class="container">
             <header>
-                <h2>Magna faucibus lorem diam</h2>
-                <p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+                <h2>Leave a message!</h2>
+                <p>Feel free to also email me at <a style = 'margin-left:10px;'><input type="submit" value="kostadin.devedzhiev@stonybrook.edu" class="primary"/></a></p>
             </header>
-            <form method="post" action="#" class="cta">
-                <div class="row gtr-uniform gtr-50">
-                    <div class="col-8 col-12-xsmall"><input type="email" name="email" id="email"
-                                                            placeholder="Your Email Address"/></div>
-                    <div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary"/>
+            <!-- Form -->
+            <section>
+                <form method="post" action="/submit_form">
+                    <div class="row gtr-uniform gtr-50">
+                        <div class="col-6 col-12-xsmall">
+                            <input type="text" name="name" id="name" value="" placeholder="Name"/>
+                        </div>
+                        <div class="col-6 col-12-xsmall">
+                            <input type="email" name="email" id="email" value="" placeholder="Email"/>
+                        </div>
+                        <div class="col-12">
+                            <textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+                        </div>
+                        <div class="col-12">
+                            <ul class="actions">
+                                <li><input type="submit" value="Send Message" class="primary"/></li>
+                                <li><input type="reset" value="Reset"/></li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+            </section>
         </div>
+
+
     </section>
 
     <!-- Footer -->
     <footer id="footer">
-        {#        <ul class="icons">#}
-        {#            <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>#}
-        {#            <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>#}
-        {#            <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>#}
-        {#            <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>#}
-        {#            <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>#}
-        {#            <li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>#}
-        {#        </ul>#}
+                <div class='socials'>
+
+            <ul class="icons">
+                <li><a href="https://github.com/KostadinDev" target='_blank' class=""><span class=""><img
+                        src='../static/images/github.png' width='40px'></span></a>
+                </li>
+                <li><a href="https://www.linkedin.com/in/kostadin-dev" target='_blank' class=""><span
+                        class=""><img src='../static/images/linkedin-logo.png'></span></a>
+                </li>
+                <li><a href="https://www.instagram.com/kostadin.devedzhiev/?hl=en" target='_blank'
+                       class=""><span class=""><img src='../static/images/instagram-logo.png'
+                                                    width='40px'></span></a></li>
+
+            </ul>
+
+        </div>
         <ul class="copyright">
             <li>Stony Brook University</li>
             <li>University of Hawaii at Hilo</li>
