adding favicon and fixing bugs

--- a/templates/empty.html
+++ b/templates/empty.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="../static/assets/css/main.css"/>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.png') }}">
     <noscript>
         <link rel="stylesheet" href="../static/assets/css/noscript.css"/>
     </noscript>
@@ -35,7 +36,7 @@
         <div class="container">
             <header class="major">
                 <h2>Oops! The web page has not been published yet! </h2>
-                <p>Get back to the <a href="index.html" class="">projects</a> or go to the <a href="projects.html" class="">homepage</a>.</p>
+                <p>Get back to <a href="projects.html" class="">projects</a> or go to <a href="index.html" class="">homepage</a>.</p>
             </header>
 
             <!-- Content -->
