--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 <head>
-    <title>Landed by HTML5 UP</title>
+    <title>KostadinTheDev</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="../static/assets/css/main.css"/>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <noscript>
         <link rel="stylesheet" href="../static/assets/css/noscript.css"/>
     </noscript>
@@ -85,8 +86,8 @@
                             Mandel. You can see more about this
                             project and other recent works below or in <a>projects.</a></p>
                         <p>
-                            The amazing picture in the back was taken at Mauna Kea, Hawaii by .
-                            <a href='https://unsplash.com/@zmart'>Martin Zangerl</a></p>
+                            The amazing picture in the back was taken at Mauna Kea, Hawaii by
+                            <a href='https://unsplash.com/@zmart'>Martin Zangerl.</a></p>
                     </div>
                 </div>
             </div>
