--- a/templates/empty.html
+++ b/templates/empty.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>No Sidebar - Landed by HTML5 UP</title>
+    <title>Sorry!</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="../static/assets/css/main.css"/>
@@ -24,8 +24,12 @@
         <h1 id="logo"><a href="index.html">Home</a></h1>
         <nav id="nav">
             <ul>
-
-                <li><a href="../static/documents/resume-s2020.pdf">CV</a></li>
+                <li><a href="resume.html">CV</a>
+                    <ul>
+                        <li><a href="resume.html">Web Version</a></li>
+                        <li><a href="../static/documents/resume-s2020.pdf">PDF Version</a></li>
+                    </ul>
+                </li>
                 <li><a href="projects.html" class="button primary">Projects</a></li>
             </ul>
         </nav>
@@ -36,7 +40,8 @@
         <div class="container">
             <header class="major">
                 <h2>Oops! The web page has not been published yet! </h2>
-                <p>Get back to <a href="projects.html" class="">projects</a> or go to <a href="index.html" class="">homepage</a>.</p>
+                <p>Get back to <a href="projects.html" class="">projects</a> or go to <a href="index.html" class="">homepage</a>.
+                </p>
             </header>
 
             <!-- Content -->
