--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,12 @@
         <h1 id="logo"><a href="index.html">Home</a></h1>
         <nav id="nav">
             <ul>
-                <li><a href="../static/documents/resume-s2020.pdf" target="_blank">CV</a></li>
+                <li><a href="resume.html">CV</a>
+                    <ul>
+                        <li><a href="resume.html">Web Version</a></li>
+                        <li><a href="../static/documents/resume-s2020.pdf">PDF Version</a></li>
+                    </ul>
+                </li>
                 <li><a href="projects.html" class="button primary">Projects</a></li>
             </ul>
         </nav>
@@ -116,7 +121,8 @@
                 applications are discussed.</p>
             <p>Glad to have worked on this project together with Dr. Phillipe Binder and Alexa Runyan.</p>
             <ul class="actions">
-                <li><a href="https://github.com/KostadinDev/Elliptical-EMF-Induction" class="button">Learn More on GitHub<br> (Paper Currently Under Academic Review)</a></li>
+                <li><a href="https://github.com/KostadinDev/Elliptical-EMF-Induction" class="button" target="_blank">Learn
+                    More on GitHub<br> (Paper Currently Under Academic Review)</a></li>
             </ul>
         </div>
         <a href="#three" class="goto-next scrolly">Next</a>
@@ -155,40 +161,27 @@
             <header class="major">
                 <h2>Other recent work</h2>
                 <p>"As soon as you have made a thought, laugh at it." <br>
-                - Lao Tzu</p>
+                    - Lao Tzu</p>
             </header>
             <div class="box alt">
                 <div class="row gtr-uniform">
                     <section class="col-4 col-6-medium col-12-xsmall">
-                        <span class="icon solid alt major fa-chart-area"></span>
+                        <img src='../static/images/dataviz.png' width='140px' height='140px'
+                             style="border-radius:50px;">
                         <h3>Data Viz Lab Website</h3>
                         <p>Developing the web page for the Data Visualization Lab at the University of Hawaii Hilo.</p>
                     </section>
                     <section class="col-4 col-6-medium col-12-xsmall">
-                        <span class="icon solid alt major fa-comment"></span>
+                        <img src='../static/images/holographic-fan.jpg' width='140px' height='140px'
+                             style="border-radius:50px;">
                         <h3>API & UI for Holographic Fan</h3>
                         <p>Developed an API and basic user interface for a DseeLab holographic fan.</p>
                     </section>
                     <section class="col-4 col-6-medium col-12-xsmall">
-                        <span class="icon solid alt major fa-flask"></span>
+                        <img src='../static/images/mauka-vs-makai.png' width='140px' style="border-radius:50px;">
                         <h3>Mauka vs Makai</h3>
                         <p>DL app that recognizes if an image is taken at Makai (ocean side) or Mauka (mountain
                             side).</p>
-                    </section>
-                    <section class="col-4 col-6-medium col-12-xsmall">
-                        <span class="icon solid alt major fa-paper-plane"></span>
-                        <h3>Microprocessor Implementation</h3>
-                        <p>Digitally implemented a microprocessor with 16 commands.</p>
-                    </section>
-                    <section class="col-4 col-6-medium col-12-xsmall">
-                        <span class="icon solid alt major fa-file"></span>
-                        <h3>Adam Bashforth Method</h3>
-                        <p>Implemented the Adam Bashforth method for initial value problems.</p>
-                    </section>
-                    <section class="col-4 col-6-medium col-12-xsmall">
-                        <span class="icon solid alt major fa-lock"></span>
-                        <h3>Mickey Mantle Game</h3>
-                        <p>Developed a card game that can be played with friends or with the computer.</p>
                     </section>
                 </div>
             </div>
@@ -200,14 +193,14 @@
         </div>
     </section>
 
-
-
     <!-- Five -->
     <section id="five" class="wrapper style2 special fade">
         <div class="container">
             <header>
                 <h2>Leave a message!</h2>
-                <p>Feel free to also email me at <a style = 'margin-left:10px;'><input type="submit" value="kostadin.devedzhiev@stonybrook.edu" class="primary"/></a></p>
+                <p>Feel free to also email me at <a style='margin-left:10px;'><input type="submit"
+                                                                                     value="kostadin.devedzhiev@stonybrook.edu"
+                                                                                     class="primary"/></a></p>
             </header>
             <!-- Form -->
             <section>
@@ -238,7 +231,7 @@
 
     <!-- Footer -->
     <footer id="footer">
-                <div class='socials'>
+        <div class='socials'>
 
             <ul class="icons">
                 <li><a href="https://github.com/KostadinDev" target='_blank' class=""><span class=""><img
