--- a/templates/projects.html
+++ b/templates/projects.html
@@ -26,8 +26,13 @@
         <h1 id="logo"><a href="index.html">Home</a></h1>
         <nav id="nav">
             <ul>
-                <li><a href="../static/documents/resume-s2020.pdf" target='_blank'>CV</a></li>
-                <li><a href="" class="button primary">Projects</a></li>
+                <li><a href="resume.html">CV</a>
+                    <ul>
+                        <li><a href="resume.html">Web Version</a></li>
+                        <li><a href="../static/documents/resume-s2020.pdf">PDF Version</a></li>
+                    </ul>
+                </li>
+                <li><a href="projects.html" class="button primary">Projects</a></li>
             </ul>
         </nav>
     </header>
