--- a/templates/thank-you.html
+++ b/templates/thank-you.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>No Sidebar - Landed by HTML5 UP</title>
+    <title>Thank you!</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="../static/assets/css/main.css"/>
@@ -24,8 +24,12 @@
         <h1 id="logo"><a href="index.html">Home</a></h1>
         <nav id="nav">
             <ul>
-
-                <li><a href="../static/documents/resume-s2020.pdf">CV</a></li>
+                <li><a href="resume.html">CV</a>
+                    <ul>
+                        <li><a href="resume.html">Web Version</a></li>
+                        <li><a href="../static/documents/resume-s2020.pdf">PDF Version</a></li>
+                    </ul>
+                </li>
                 <li><a href="projects.html" class="button primary">Projects</a></li>
             </ul>
         </nav>
