--- a/templates/elements-copy.html
+++ b/templates/elements-copy.html
@@ -119,7 +119,7 @@
                         <h4>Unordered</h4>
                         <ul>
                             <li>Dolor pulvinar etiam magna etiam.</li>
-                            <li>Sagittis adipiscing lorem eleifend.</li>
+                            <li>Saadipiscing lorem eleifend.</li>
                             <li>Felis enim feugiat dolore viverra.</li>
                         </ul>
 
@@ -315,7 +315,7 @@
                     <li><a href="#" class="button primary large">Large</a></li>
                     <li><a href="#" class="button">Default</a></li>
                     <li><a href="#" class="button small">Default</a></li>
-                </ul>
+                </ul>gittis
                 <div class="row">
                     <div class="col-6 col-12-xsmall">
                         <ul class="actions fit">
