--- a/templates/resume.html
+++ b/templates/resume.html
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>resume</title>
+    <title>Resume</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="../static/assets/css/main.css"/>
@@ -21,56 +21,26 @@
 <div id="page-wrapper">
 
     <!-- Header -->
-    <header id="header">
-        <h1 id="logo"><a href="index.html">Home</a></h1>
-        <nav id="nav">
-            <ul>
-                <li><a href="resume.html">CV</a>
-                    <ul>
-                        <li><a href="resume.html">Web Version</a></li>
-                        <li><a href="../static/documents/resume-s2020.pdf">PDF Version</a></li>
-                    </ul>
-                </li>
-                <li><a href="projects.html" class="button primary">Projects</a></li>
-            </ul>
-        </nav>
-    </header>
+<header id="header">
+				<div class="inner">
+					<a href="index.html" class="image avatar"><img src="../static/images/profile-pic.jpg" alt="" /></a>
+					<h1><strong>Kostadin Devedzhiev</strong> <br>
+					<i><h6>kostadin.devedzhiev@stonybrook.edu</h6></i>
+					<p>Computer Vision, NLP, ML, <br>Environmental Conservation </h1>
+				</div>
+			</header>
 
     <!-- Main -->
     <div id="main" class="wrapper style1">
         <div class="container">
-            <header class="major">
-                <h2>Kostadin Devedzhiev</h2>
-                <p>
-                <div class="resume">
-                    <div class="socials email">
-                        <a href="../static/documents/resume-s2020.pdf" class="button small"
-                           style="padding-left:30px;padding-right:30px;">PDF Resume</a>
-                    </div>
-                    <div class="socials email">
-                        <a class="button small" style="padding-left:30px;padding-right:30px;">kostadin.devedzhiev@stonybrook.edu</a>
-                    </div>
-                    <div class="socials">
-                        <ul class="icons">
-                            <li><a href="https://github.com/KostadinDev" target='_blank' class=""><span class=""><img
-                                    src='../static/images/github.png' width='40px'></span></a>
-                            </li>
-                            <li><a href="https://www.linkedin.com/in/kostadin-dev" target='_blank' class=""><span
-                                    class=""><img src='../static/images/linkedin-logo.png' width='40px'></span></a>
-                            </li>
-                            <li><a href="https://www.instagram.com/kostadin.devedzhiev/?hl=en" target='_blank'
-                                   class=""><span class=""><img src='../static/images/instagram-logo.png'
-                                                                width='40px'></span></a></li>
-
-                        </ul>
-
-                    </div>
-                </div>
-                </p>
-            </header>
-
+         
             <!-- Content -->
             <section>
+			<header class="major">
+							<h2>Curriculum Vitae</h2>
+                        
+                
+						</header>
                 <h3>Education</h3>
                 <p>
                 <div class=resume-row>
@@ -79,7 +49,7 @@
                 </div>
                 Bachelor of Science in Computer Science, Applied Mathematics & Statistics <br>
                 Specialization in Artificial Intelligence and Data Science <br>
-                GPA: 3.93/4.00
+                GPA: 3.85/4.00
                 </p>
                 <hr/>
 
@@ -135,6 +105,14 @@
                 </p>
                 <hr/>
                 <h3>Teaching Experience</h3>
+				                <p>
+                <div class=resume-row>
+                    <div class="resume-column"><b>Applied Mathematics & Statistics Teching Assitant</b><br> <i>Stony Brook University, Stony Brook NY</i>
+                    </div>
+                    <div class="resume-column"><span> Sep 2020 - Present</span></div>
+                </div>
+                AMS 210: Applied Linear Algebra
+                </p>
                 <p>
                 <div class=resume-row>
                     <div class="resume-column"><b>Linear Algebra Grader</b><br> <i>University of Hawaii Hilo, Hilo
@@ -213,13 +191,13 @@
 
                         </tr>
                         <tr>
-                            <td>Machine Learning & Data Science</td>
-                            <td>TensorFlow, Keras, SciKit-learn, Numpy, Pandas, SciPy</td>
-                            <td>Keras</td>
+                            <td>Machine Learning </td>
+                            <td>PyTorch, TensorFlow, Keras, SciKit-learn, Pandas</td>
+                            <td>PyTorch</td>
                         </tr>
                         <tr>
                             <td>Visualization & Image Processing</td>
-                            <td>Matplotlib, Seaborn, Plotly, OpenCV, Pillow, Ggplot2</td>
+                            <td>Matplotlib, Seaborn, Plotly, OpenCV, Ggplot2</td>
                             <td>Seaborn</td>
                         </tr>
                         <tr>
@@ -234,7 +212,7 @@
                         </tr>
                         <tr>
                             <td>Future Picks</td>
-                            <td>PyTorch, Q#, Django, Scrappy, Golang, Spark</td>
+                            <td>Q#, Django, Scrappy, Golang, Spark</td>
                             <td>Q#</td>
                         </tr>
                         </tbody>
@@ -244,32 +222,35 @@
                 <section>
                     <h3>Selected Coursework</h3>
                     <div class="row">
-                        <div class="col-4 col-12-xsmall">
+                        <div class="col-6 col-12-xsmall">
                             <h4>Computer Science</h4>
                             <ul class="alt">
-                                <li>Machine Learning <a>with Python</a></li>
-                                <li>Data Science Fundamentals <a>with R</a></li>
-                                <li>Data Structures <a>with Java</a></li>
-                                <li>Object Orientated Programming <a>with Java</a></li>
-                                <li>Computer Organization & Assembly <a>with C++</a></li>
+                                <li>Machine Learning </li>
+                                <li>Artificial Intelligence </li>
+								<li>Computer Vision </li>
+								<li>Natural Language Processing</li>
+                                <li>Data Science Fundamentals </li>
+								<li>Algorithm Analysis</li>
+                                <li>Data Structures </li>
+                                <li>Object Orientated Programming </li>
+                                <li>Software Development </li>
+								<li>Programming Abstractions </li>
+                                <li>Theory of Computation</li>
+                                <li>Systems Fundamentals I </li>
                             </ul>
 
                         </div>
-                        <div class="col-4 col-12-xsmall">
-                            <h4>Applied Mathematics & Statistics</h4>
+                        <div class="col-6 col-12-xsmall">
+                            <h4>Mathematics & Science</h4>
                             <ul class="alt">
-                                <li>Numerical Analysis <a>with Python</a></li>
-                                <li>Applied Linear Algebra <a>with MatLab</a></li>
+								<li>Statistics and Probability </li>
+								<li>Finite Mathematical Structures </li>
+                                <li>Numerical Analysis </li>
+                                <li>Applied Linear Algebra </li>
                                 <li>Calculus III with Applications</li>
                                 <li>Applied Calculus II</li>
                                 <li>Calculus I</li>
-                            </ul>
-
-                        </div>
-                        <div class="col-4 col-12-xsmall">
-                            <h4>Science & Humanities</h4>
-                            <ul class="alt">
-                                <li>Electricity and Magnetism with Lab</li>
+								<li>Electricity and Magnetism with Lab</li>
                                 <li>Classical Mechanics with Lab</li>
                                 <li>General Chemistry II with Lab</li>
                                 <li>General Chemistry I with Lab</li>
@@ -277,6 +258,7 @@
                             </ul>
 
                         </div>
+                    
                     </div>
                 </section>
 
@@ -284,30 +266,19 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer id="footer">
-        <div class='socials'>
-
-            <ul class="icons">
-                <li><a href="https://github.com/KostadinDev" target='_blank' class=""><span class=""><img
-                        src='../static/images/github.png' width='40px'></span></a>
-                </li>
-                <li><a href="https://www.linkedin.com/in/kostadin-dev" target='_blank' class=""><span
-                        class=""><img src='../static/images/linkedin-logo.png'></span></a>
-                </li>
-                <li><a href="https://www.instagram.com/kostadin.devedzhiev/?hl=en" target='_blank'
-                       class=""><span class=""><img src='../static/images/instagram-logo.png'
-                                                    width='40px'></span></a></li>
-
-            </ul>
-
-        </div>
-        <ul class="copyright">
-            <li>Stony Brook University</li>
-            <li>University of Hawaii Hilo</li>
-        </ul>
-
-    </footer>
+	<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="https://www.linkedin.com/in/kostadin-dev/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/KostadinDev" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<!--<li><a href="#" class="icon brands fa-medium"><span class="label">Medium</span></a></li>-->
+					</ul>
+					<ul class="copyright">
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
 
 </div>
 
