Updating bio and title

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>KD</title>
+		<title>Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../static/assets/css/main.css" />
@@ -32,11 +32,14 @@
 						<header class="major">
 							<h2>Interests</h2>
 						</header>
-						<p>Kostadin Devedzhiev is a student researcher who works with Professor Anurag Purwar to build machine learning models for vision and speech processing on microcontrollers.<br>
-						Kostadin is deeply passionate about science and protecting the environment. He believes artificial intelligence will push those fields forward.<br>
-						Kostadin has worked as a research assistant for Professor Travis Mandel on an artificial intelligence project concerned with scientific data collection. The motivation is to fight invasive species found in natural environments.<br>
-						Kostadin is pursuing a Bachelor of Science in Computer Science and Applied Mathematics & Statistics from Stony Brook University.
- 
+						<p>
+						Kostadin Devedzhiev is a student researcher who works with Professor Anurag Purwar on building machine learning models for vision and speech processing on microcontrollers. He is also a teaching assistant for Professor Yan Yu’s applied linear algebra course. 
+<br>
+Kostadin is passionate about protecting the environment. He believes artificial intelligence is key to future sustainability. 
+<br>
+Kostadin has worked as a research assistant for Professor Travis Mandel on an artificial intelligence project concerned with scientific data collection. The artificial agent aims to improve and speed up data annotation from aerial images. The motivation is to fight invasive species found in natural environments. 
+<br>
+Kostadin is pursuing a Bachelor of Science in Computer Science and Applied Mathematics & Statistics from Stony Brook University. 
 </p>
 						<ul class="actions">
 							<li><a href="resume.html" class="button">Web CV</a> <a href="../static/documents/resume.pdf" class="button">PDF CV</a></li>
