Updated BIO, WEB CV, and PDF CV

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,10 @@
 					<i><h6>kostadin.devedzhiev@stonybrook.edu</h6></i>
 					
 					<p>Computer Vision, NLP, ML, <br>Environmental Conservation </p></h1>
+					
+			
+
+					
 				</div>
 			</header>
 
@@ -30,20 +34,47 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
+						
+						
 							<h2>Interests</h2>
 						</header>
+				
 						<p>
 						Kostadin Devedzhiev is a student researcher who works with Professor Anurag Purwar on building machine learning models for vision and speech processing on microcontrollers. He is also a teaching assistant for Professor Yan Yu’s applied linear algebra course. 
 <br>
-Kostadin is passionate about protecting the environment. He believes artificial intelligence is key to future sustainability. 
+Kostadin is passionate about protecting the environment. He believes artificial intelligence is key to future sustainability. In the future, he wants to pursue research in the field.
 <br>
-Kostadin has worked as a research assistant for Professor Travis Mandel on an artificial intelligence project concerned with scientific data collection. The artificial agent aims to improve and speed up data annotation from aerial images. The motivation is to fight invasive species found in natural environments. 
+Kostadin has worked as a research assistant for Professor Travis Mandel on an artificial intelligence project concerned with scientific data collection. The project's goal is to improve and speed up data annotation from aerial images. The motivation is to fight invasive species found in natural environments. 
 <br>
 Kostadin is pursuing a Bachelor of Science in Computer Science and Applied Mathematics & Statistics from Stony Brook University. 
 </p>
 						<ul class="actions">
 							<li><a href="resume.html" class="button">Web CV</a> <a href="../static/documents/resume.pdf" class="button">PDF CV</a></li>
 						</ul>
+					
+						</header>
+						
+						<!--
+						<div id="about"><div class="inner">
+				<h2>My Console</h2>
+				</header>
+		
+							<pre><code>
+&#8250;&#8250;&#8250;&nbsp;Kostadin.education
+'Stony Brook University'
+
+&#8250;&#8250;&#8250;&nbsp;Kostadin.major
+['Computer Science', 'Applied Mathematics & Statistics']
+
+&#8250;&#8250;&#8250;&nbsp;Kostadin.interests
+['Machine Learning', 'Computer Vision', 'Natural Language Processing']
+
+&#8250;&#8250;&#8250;&nbsp;Kostadin.resume
+{'web':<a href="resume.html">'resume.html'</a>, 'pdf':<a href="../static/documents/resume.pdf">'resume.pdf'</a>}
+</code></pre>
+				</div>
+			</div>
+			-->
 					</section>
 
 				<!-- Two -->
@@ -53,7 +84,7 @@ Kostadin is pursuing a Bachelor of Science in Computer Science and Applied Mathe
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="../static/images/interactive-annotator.png" class="image fit thumb"><img src="../static/images/interactive-annotator-copy.png" alt="" /></a>
 								<h3>Symbiotic Learning</h3>
-								<p>A semi-automatic tool for annotation that utilizes state-of-art vision models to detect and classify previously unseen objects.</p>
+								<p>A semi-automatic tool for annotation that utilizes state-of-art vision models to detect and classify previously unseen data.</p>
 								<a><p>In Development</p></a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -92,8 +123,7 @@ Kostadin is pursuing a Bachelor of Science in Computer Science and Applied Mathe
 						</ul>
 						-->
 					</section>
-			<!-- 
-				<!-- Three 
+			<!--
 
 					<section id="three">
 						<h2>Get In Touch</h2>
@@ -132,7 +162,7 @@ Kostadin is pursuing a Bachelor of Science in Computer Science and Applied Mathe
 						</div>
 					</section>
 
-				<!-- Four 
+				
 			
 					<section id="four">
 						<h2>Elements</h2>
