--- a/templates/resume.html
+++ b/templates/resume.html
@@ -48,6 +48,7 @@
                     <div class="resume-column"><span> Sep 2018 - Present</span></div>
                 </div>
                 Bachelor of Science in Computer Science, Applied Mathematics & Statistics <br>
+                Computer Science Honors Program <br>
                 Specialization in Artificial Intelligence and Data Science <br>
                 GPA: 3.85/4.00
                 </p>
@@ -61,15 +62,13 @@
                     <div class="resume-column"><span> Jun 2020 - Present</span></div>
                 </div>
                 <ul>
-                    <li>Researched and developed human-in-the-loop AI for HCI considering efficiency and user
-                        experience.
+                    <li>Researched and developed human-in-the-loop artificial intelligence for human-computer interaction.
                     </li>
-                    <li>Worked on a convolutional neural network that utilizes transfer learning, data augmentation, and
-                        semi-supervised learning to handle lack of data.
+                    <li>Trained a convolutional neural network with transfer learning and data augmentation.
                     </li>
-                    <li>Implemented a novel algorithm for hyper-parameter tuning based on noisy binary search.</li>
-                    <li>Developed a multithreaded application that runs the ML real-time as the user is on the UI.</li>
-                    <li>The main tools used were Python, TensorFlow, Keras, Numpy, Pandas, and PyQt.</li>
+                    <li>Developed a Bayesian algorithm for hyper-parameter tuning.</li>
+                    <li>Developed a multithreaded application that handles detection, classification, and user interactivity.</li>
+           
 
                 </ul>
                 </p>
@@ -80,11 +79,9 @@
                     <div class="resume-column"><span> Mar 2020 - May 2020</span></div>
                 </div>
                 <ul>
-                    <li>Developed the website for the Data Visualization Lab at the University of Hawaii Hilo with
-                        React.js.
+                    <li>Worked on a research project with holographic visualizations using a DseeLab holographic fan
                     </li>
-                    <li>Worked on a research project interested with holographic visualizations using a DseeLab
-                        holographic fan.
+                    <li>Built an API that connects the holographic fan and the server using Java and Spring.
                     </li>
                     <li>Built an API that connects the holographic fan and the server using Java and Spring Boot.</li>
                     <li>Responsible for the setup and maintenance of computers and 3D printers in research labs.</li>
@@ -97,7 +94,7 @@
                     <div class="resume-column"><span> Jun 2019 - Aug 2019</span></div>
                 </div>
                 <ul>
-                    <li>Collaboratively worked on the frontend for a web app system using React.js.</li>
+                    <li>Worked on the frontend for a web app system using React.</li>
                     <li>Located and fixed roots behind erroneous entries in a database for a transportation company.
                     </li>
                     <li>Practiced agile software development and worked collaboratively with different departments.</li>
